<resources>
    <string name="app_name">The File-It-Calendar</string>
    <string name="userName">UserName</string>
    <string name="text_register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confrom Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="login_mobilenumber"><font size="10">Enter Mobile Number</font></string>
    <string name="text_login">Login</string>
    <string name="save_event">Save Event</string>
    <string name="text_login_account">Don\'t have an account?<font color='#1D3C4B'>Register</font> </string>
    <string name="text_creat_account">Already have an account?<font color='#1D3C4B'>Login in</font> </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigtn">BottomNavigtnActivity</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_notifications">Notifications</string>
    <string name="true_tick">\u2713</string>
    <string name="EPF">EPF &amp; MP Act</string>

    <string name="About">“The File-It-Calendar” is a Private Limited Company incorporated in the year 2007, under the Companies Act, 1956.
Conceptualized by , dynamic and experienced professionals, ′ s USP is to provide solutions from “iota to infinite”.  comprises Professionals with Multi Disciplinary skills committed to offer corporate services of highest standard”.
The promoters envisaged consolidation of versatile skills to have a cutting edge in the dynamic consulting market and master minded the inception of , a company that is inclined to provide integrated solutions through diversified thoughts.
The principle of  is to add value to the Clients, Profession and Industry through ethical practices.
The Aims and Aspirations of  are to provide pioneering solutions to corporate clients in Secretarial, Legal and Management aspects and to endure as premier corporate service provider.
</string>
    <string name="vision_about">To emerge as a "Global Consulting Organization" by rendering impeccable solutions,
        formulated by intellectuals and delivered diligently.</string>
    <string name="mission_about">To acheive our "Vision"by:\n
•	Building an environment\n
•	Driven by Intelligence\n
•	Powered by technology\n
•	Governed in a most ethical manner\n
•	Adopting the best bussiness principles and practices\n
</string>
    <string name="terms_conditions">\u2022The following terms and conditions tell you information about us and are the legal terms and conditions on which you purchase goods and services (“products”) from Grey Matter Limited.
        These terms and conditions will apply to any contract between us for the sale of products to you.
        We want you to understand the legal basis upon which you buy products from us.
    </string>
    <string name="terms_conditions_1">\u2022The following terms and conditions tell you information about us and are the legal terms and conditions on which you purchase goods and services (“products”) from Grey Matter Limited.
        These terms and conditions will apply to any contract between us for the sale of products to you.
        We want you to understand the legal basis upon which you buy products from us.
    </string>
    <string name="suport">If you need any clarifications.Our team support team is happy to assist you</string>
    <string name="contact_info">MS AGARWAL &amp; Co
Chartered Accountants\n
409, 4th Floor,\n
Malik Chamber,\n
Hyderguda Main Road,\n
Old MLA Quarters,\n
Beside DMart,\n
Opp. Swati Coffee Shop,\n
Basheerbagh,\n
Hyderabad,
Telangana 500029\n
Landline +91-40-66102570\n
Office Mobile 63006 82670,63038 22460.\n
        www.camsagarwal.com\n
        CA Madhusudan Agarwal 9959505670
</string>
    <string name="msg_subscribed">Successfull</string>
    <string name="msg_subscribe_failed">Failed</string>
    <string name="channel_name">channelname</string>
    <string name="channcel_desc">descprion</string>
    <string name="Descrptionm">Some Descrption Aboutb Diwali </string>
    <string name="label_network_error_message">Network Error</string>
    <string name="label_network_button_text">No internet connection !\\\\nPlease check your Internet Connection</string>
    <string name="incomDesc">Payment Of TDS/TCS for previous month</string>
    <string name="title_calendaer">Mycalendar</string>
    <string-array name="colors">
        <item>#ff0000</item>
        <item>#00ff00</item>
        <item>#0000ff</item>
    </string-array>
</resources>

