<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/relativeLayout"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:layout_gravity="center"
    android:src="@drawable/madhusudhan_logo"

    />
        <Zastra.GSTIT.Utils.CustomTextViewNormal
            android:id="@+id/newText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_mobilenumber"
                android:padding="10dp">

                <EditText
                    android:id="@+id/loginMobile"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                android:padding="10dp">

                <EditText
                    android:id="@+id/loginPaswrd"
                    android:layout_width="match_parent"
                    android:singleLine="true"
                    android:textSize="15dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"                />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/colorAccent"
                android:text="@string/text_login"
                android:textStyle="bold"
                android:textColor="@color/white" />
            <Zastra.GSTIT.Utils.CustomTextViewNormal
                android:id="@+id/createNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_login_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:textStyle="bold"
                />

        </LinearLayout>
    </LinearLayout>


</RelativeLayout>