<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zastrait.GSTIT.SettingsMenu.AboutActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp"
        android:background="@color/colorAccent"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_height="match_parent">
                <zastrait.GSTIT.Utils.CustomTextViewNormal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    android:layout_margin="20dp"
                    />
                <zastrait.GSTIT.Utils.CustomTextViewNormal
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:layout_margin="10dp"
                    android:text="@string/About"
                    android:textColor="@color/black"
                    android:textStyle="italic"

                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:orientation="vertical"
                    android:background="@drawable/background_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:text="Vision"
                        android:background="@color/text_red"
                        android:padding="@dimen/margin_10dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"

                        />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/vision"


                        />
                    <zastrait.GSTIT.Utils.CustomTextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15dp"
                        android:layout_margin="10dp"
                        android:text="@string/vision_about"
                        android:textColor="@color/black"
                        android:textStyle="italic"



                        />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10dp"
                    android:orientation="vertical"
                    android:background="@drawable/background_shape">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/margin_10dp"
                        android:text="Mission"
                        android:background="@color/text_red"
                        android:padding="@dimen/margin_10dp"
                        android:textColor="@color/white"
                        android:textStyle="bold"

                        />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/mission"


                        />
                    <zastrait.GSTIT.Utils.CustomTextViewNormal
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="15dp"
                        android:layout_margin="10dp"
                        android:text="@string/mission_about"
                        android:textColor="@color/black"
                        android:textStyle="italic"



                        />



                </LinearLayout>




            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>